# TaskTracker

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  README.md  alembic.ini  app.py  docker-compose.yml  readme.md  requirements.txt
apps/backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_baseline.py  0002_create_users_table.py  0003_create_organizations_table.py  0004_create_workspaces_table.py  (+11 more)
apps/backend/taskmaster_backend/: __init__.py
apps/backend/tests/: alembic_test_utils.py  conftest.py  test_alembic_config.py  test_audit_log_migration.py  test_audit_log_model.py  test_audit_writer_service.py  test_auth_dependency.py  test_board_migration.py  test_board_model.py  test_component_model.py  test_database_session.py  test_entity_versions.py  test_epic_model.py  test_event_outbox_model.py  test_jwt_access_tokens.py  test_label_model.py  test_login_endpoint_contract.py  test_logout_revoke_endpoint_contract.py  test_organization_membership_model.py  test_organization_migration.py  test_organization_model.py  test_organization_owner_migration.py  test_outbox_service.py  test_password_hashing.py  test_permission_migration.py  test_permission_model.py  test_project_component_endpoints.py  test_project_label_endpoints.py  test_project_migration.py  test_project_model.py  test_project_version_endpoints.py  test_project_workflow_state_catalog_endpoint.py  test_rbac_authorization_dependency.py  test_rbac_permission_evaluator.py  test_refresh_token_endpoint_contract.py  test_refresh_token_model.py  test_role_migration.py  test_role_model.py  test_smoke.py  test_sprint_model.py  (+28 more)
(+288 files in other folders)
